# Progetto2Gruppo25

./: CMakeLists.txt  README.md  main.c
BST/: tree.c  tree.h
Booking/: booking.c  booking.h
CheckMail/: checkMail.c  checkMail.h
DoubleList/: doubleList.c  doubleList.h
Graph/: graph.c  graph.h
Input/: inputReader.c  inputReader.h
List/: list.c  list.h
Queue/: queue.c  queue.h
Stack/: stack.c  stack.h
User/: user.c  user.h
Util/: util.c  util.h
